0032910: Coding Rules - fix uninitialized class fields in constructor initialization block reported by VS2019/C++20

Microsoft Visual Studio Professional 2019
Version 16.11.11
std=c++20

Get rid of warnings about uninitialized class fields in constructor initialization block.